src/test/examples/custom/valid/class/canAccessPublicClassAttribute.wacc
# Public class attributes can be accessed

begin
  class H is 
    public int v
    private int J(int v) is 
      return 0
    end
  end
  H p = new H(2);
  p.v = 3
end